Formatting of the chaos list logs + made sure race log is always included after list logs

--- a/lists/Chaos/alphalegion.log.html
+++ b/lists/Chaos/alphalegion.log.html
@@ -11,18 +11,18 @@
     in how it differs from other Chaos Space Marine lists.
 </p>
 <p>
-    Anti-Air: With no really good 30k Anti-Air unit to pick from, the AA aspect of the list is instead performed by the
+    <b>Anti-Air</b>: With no really good 30k Anti-Air unit to pick from, the AA aspect of the list is instead performed by the
     Imperial Guard Hydra. This happens to fit the Alpha Legion theme as well, since the Hydra is the Alpha Legion's symbol.
 </p>
 <p>
-    Alpha Legion Transports: To reinforce the theme that the Alpha Legion is very close to loyalist Space Marines (and
+    <b>Alpha Legion Transports</b>: To reinforce the theme that the Alpha Legion is very close to loyalist Space Marines (and
     to compensate for the relative lack of daemons and heavy CSM formations) the Alpha Legion has the equivalent to the
     Space Marine Transports rule, has access to Air Assault transport, and has Drop Pods instead of Dreadclaws. This
     makes the Alpha Legion Terminators some of the most flexible in the game, since they can choose between deploying in
     Drop Pods or Teleporting.
 </p>
 <p>
-    Stubborn and The Harrowing: To give the small and very fragile Alpha Legion formations a better chance of staying
+    <b>Stubborn and The Harrowing</b>: To give the small and very fragile Alpha Legion formations a better chance of staying
     unbroken, they were given the Stubborn rule, which under most circumstances is an inferior version of the Space
     Marines' "ATSKNF" rule. The Harrowing is another compromise between giving the list 5 in Strategy Rating, and the 4
     in Strategy Rating that other Chaos Space Marine lists have.
