--- a/lists/Chaos/blacklegion.log.html
+++ b/lists/Chaos/blacklegion.log.html
@@ -3,10 +3,10 @@
     The EA:Ragnarök Black Legion list is based on the NetEA version. Black Legion is one of the most powerful armies in Epic Armageddon, and it still is, but the changes will hopefully open it up to more playstyles. Below are the more significant changes.
 </p>
 <p>
-    Anti-Air: Black Legion previously only had Obliterators as their sole ground AA unit, which by its nature caused certain formations to very common. To open up the playstyle a bit the Chaos Stalker has been added to most CSM armies, while Obliterators can be taken as part of the Chaos Terminators formation.
+    <b>Anti-Air</b>: Black Legion previously only had Obliterators as their sole ground AA unit, which by its nature caused certain formations to very common. To open up the playstyle a bit the Chaos Stalker has been added to most CSM armies, while Obliterators can be taken as part of the Chaos Terminators formation.
 </p>
 <p>
-    Factions: All factions except Undivied have been removed from the list, but due to the more balanced lesser daemons, they now cost 1 point to summon.
+    <b>Factions</b>: All factions except Undivied have been removed from the list, but due to the more balanced lesser daemons, they now cost 1 point to summon.
 </p>
 <h5>Additional nerfs, boosts & tweaks</h5>
 <ul>
