--- a/lists/Chaos/thousandsons.log.html
+++ b/lists/Chaos/thousandsons.log.html
@@ -3,19 +3,19 @@
     The EA:Ragnarök Thousand Sons list is based on the E-UK version, mixed with some inspiration from the NetEA Emperor's Children list.
 </p>
 <p>
-    Mixed Retinues: While Rubric Marines (with 3+ Armour) now easier to get rid of, making formations mixed between non-fearless and fearless units makes the retinues more flexible but also more brittle. Thousand Sons retinues are extremely expensive, but has access to what are probably the best selection of daemons and are very hard to shift. The Thousand Sons Marines and Thousand Sons Havocs are now ordinary Chaos Space Marines but with Tzeentchian weaponry.
+    <b>Mixed Retinues</b>: While Rubric Marines (with 3+ Armour) now easier to get rid of, making formations mixed between non-fearless and fearless units makes the retinues more flexible but also more brittle. Thousand Sons retinues are extremely expensive, but has access to what are probably the best selection of daemons and are very hard to shift. The Thousand Sons Marines and Thousand Sons Havocs are now ordinary Chaos Space Marines but with Tzeentchian weaponry.
 </p>
 <p>
-    Scarab Occult Terminators, Daemon Princes and Warp Rifts: Like other 'Cult' CSM lists, the Tzeentch-flavoured variety is also fearless, and trades their shooting and CC stats for very competent FF stats. While Thousand Sons do not have access to Dreadclaws, they do have the 'Warp Rift' special rule, giving them an unique way of entering the battlefield.
+    <b>Scarab Occult Terminators, Daemon Princes and Warp Rifts</b>: Like other 'Cult' CSM lists, the Tzeentch-flavoured variety is also fearless, and trades their shooting and CC stats for very competent FF stats. While Thousand Sons do not have access to Dreadclaws, they do have the <i>Warp Rift</i> special rule, giving them an unique way of entering the battlefield.
 </p>
 <p>
-    Faction Specific Terminators: Most CSM armies now have Terminators with special specific stats and weaponry, while those of The 'Cult' armies are also Fearless. This of course comes with a significant increase in cost. Like other 'Cult' armies, Terminators are now in the Core section instead of Elite, given their high cost.
+    <b>Faction Specific Terminators</b>: Most CSM armies now have Terminators with special specific stats and weaponry, while those of The 'Cult' armies are also Fearless. This of course comes with a significant increase in cost. Like other 'Cult' armies, Terminators are now in the Core section instead of Elite, given their high cost.
 </p>
 <p>
-    Daemons: All 'Cult' CSM armies now has a free Greater Daemon point, as well as having a compulsory Daemonic Pact upgrade. This both gives them more personality and tighter relationship with their respective patron god, but also creates some interesting tensions in army building (the Greater Daemon might be free, but the Chaos Champion certainly isn't...). This also compensates the Cult lists for the lost flexibility in daemons that Black Legion now has. What the Cult CSM lists do have is access to better version of the Daemonic Beast, as well as high-end lesser daemons which costs 2 summoning points to put on the battlefield, which opens up the potential for extremely powerful formations if summoning over a few turns.
+    <b>Daemons</b>: All 'Cult' CSM armies now has a free Greater Daemon point, as well as having a compulsory Daemonic Pact upgrade. This both gives them more personality and tighter relationship with their respective patron god, but also creates some interesting tensions in army building (the Greater Daemon might be free, but the Chaos Champion certainly isn't...). This also compensates the Cult lists for the lost flexibility in daemons that Black Legion now has. What the Cult CSM lists do have is access to better version of the Daemonic Beast, as well as high-end lesser daemons which costs 2 summoning points to put on the battlefield, which opens up the potential for extremely powerful formations if summoning over a few turns.
 </p>
 <p>
-    Tzaangors and CO: Tzaangors accompanied with Chaos Spawn or Mutalith Vortex Beasts are an important addition to the list, compensating for the expensive core formations.
+    <b>Tzaangors</b>: Tzaangors accompanied with Chaos Spawn or Mutalith Vortex Beasts are an important addition to the list, compensating for the expensive core formations.
 </p>
 
 <h5>Additional nerfs, boosts & tweaks</h5>
