--- a/lists/Chaos/worldeaters.log.html
+++ b/lists/Chaos/worldeaters.log.html
@@ -4,20 +4,13 @@
     orienting it towards the great selection of Khorne Daemon engines that exists in 40k.
 </p>
 <p>
-    Split Retinues: In the E-UK version of the list, the basic retinue could be very powerful if many formations were
-    taken, as Khorne Berzerkers were comparatively cheap for their size, and very hard to get rid of since the entire
-    formation was fearless. The introduction Chaos Assault Marines retains the very aggressive playstyle of these
-    formations while making them more vulnerable to losing Engages and giving retinues some shooting.
+    <b>Split Retinues</b>: In the E-UK version of the list, the basic retinue could be very powerful if many formations were taken, as Khorne Berzerkers were comparatively cheap for their size, and very hard to get rid of since the entire formation was fearless. The introduction Chaos Assault Marines retains the very aggressive playstyle of these formations while making them more vulnerable to losing Engages and giving retinues some shooting.
 </p>
 <p>
-    Faction Specific Terminators: Most CSM armies now have Terminators with special specific stats and weaponry, while those of The 'Cult' armies are also Fearless. This of course comes with a significant increase in cost. Like other 'Cult' armies, Terminators are now in the Core section instead of Elite, given their high cost.
+    <b>Faction Specific Terminators</b>: Most CSM armies now have Terminators with special specific stats and weaponry, while those of The 'Cult' armies are also Fearless. This of course comes with a significant increase in cost. Like other 'Cult' armies, Terminators are now in the Core section instead of Elite, given their high cost.
 </p>
 <p>
-    Juggernauts and Bloodcrushers: In order to make a greater difference between Juggernauts and Bikes, and to enable
-    the introduction of Bloodcrushers, Juggernaut riders now have better armour, better speed but no infiltrate, these
-    formations must now get closer to the enemy than before. Bloodcrushers gives the list access to exceptionally hard
-    Daemons that can keep pace with other Juggernauts. These changes were also made to enable the Daemonic Incursion
-    list to work better.
+    <b>Juggernauts and Bloodcrushers</b>: In order to make a greater difference between Juggernauts and Bikes, and to enable the introduction of Bloodcrushers, Juggernaut riders now have better armour, better speed but no infiltrate, these formations must now get closer to the enemy than before. Bloodcrushers gives the list access to exceptionally hard Daemons that can keep pace with other Juggernauts. These changes were also made to enable the Daemonic Incursion list to work better.
 </p>
 
 <h5>Additional nerfs, boosts & tweaks</h5>
