--- a/lists/Chaos/ironwarriors.log.html
+++ b/lists/Chaos/ironwarriors.log.html
@@ -3,13 +3,13 @@
     The EA:Ragnarök Iron Warriors list is loosely based on the E-UK version. Iron Warriors is one of the few Chaos Space Marine armies that lacks daemons and Chaos Sorcerers, and so start out inherently weaker than other lists. The challenge is compensate for this lack without creating builds that are too powerful. Overall, the idea is to enable a very firepower heavy playstyle with plenty of unique units and formations.
 </p>
 <p>
-    Bionics and Battlefield Repairs: The same special rules as the loyalist Iron Hands have been introduced to the list, making certain units and formations a bit tougher.
+    <b>Bionics and Battlefield Repairs</b>: The same special rules as the loyalist Iron Hands have been introduced to the list, making certain units and formations a bit tougher.
 </p>
 <p>
-    Obliterators: Iron Warriors has special access to Obliterators. While they cannot be taken as a separate formation, several formations in the army have access to them, in particular the Iron Warriors Retinue and the Tyrant Terminators.
+    <b>Obliterators</b>: Iron Warriors has special access to Obliterators. While they cannot be taken as a separate formation, several formations in the army have access to them, in particular the Iron Warriors Retinue and the Tyrant Terminators.
 </p>
 <p>
-    Ordinatus: The Ordinatus Majoris has tweaked stats and is significantly cheaper, as it is severly overpriced in other lists given how fragile the unit is. The list also receives the Ordinatus Minoris in chaos format. The Siegelord and Ravager Titans has been removed from the list due to these inclusions.
+    <b>Ordinatus</b>: The Ordinatus Majoris has tweaked stats and is significantly cheaper, as it is severly overpriced in other lists given how fragile the unit is. The list also receives the Ordinatus Minoris in chaos format. The Siegelord and Ravager Titans has been removed from the list due to these inclusions.
 </p>
 <h5>Additional nerfs, boosts & tweaks</h5>
 <ul>
