--- a/lists/Chaos/deathguard.log.html
+++ b/lists/Chaos/deathguard.log.html
@@ -23,8 +23,8 @@
 <p>
     <b>Daemon Engines</b>: All Nurgle daemon engines have replaced their <i>invulnerable save</i> with <i>regeneration</i> as we feel it fits the army theme and some of them needed a boost. We also wanted to give each of them a more defined role in the list, as they were all quite similar.
 <ul>
-    <li>The Plague Tower has been changed into a pure transport upgrade for the core formations. It is also slightly smaller but now cost only 175 points.</li>
-    <li>The Desecrators have been changed back closer to their UK original, with a Plague Cannon as a main gun but with nerfed anti-air stats.</li>
+    <li>The Plague Tower has been changed into a pure transport upgrade for the core formations. It is also slightly smaller but now cost only 150 points.</li>
+    <li>The Desecrators have been changed back closer to their UK original, with a Plague Cannon as a main gun but with nerfed range.</li>
     <li>The price of the Plague Reaper has been reduced to 200 points.</li>
 </ul>
 </p>
