Barging ac rule

--- a/content/rules.html
+++ b/content/rules.html
@@ -118,6 +118,13 @@
     needs to touch the landed air transport in order to embark (no 5cm "pickup zone" in this case)
 </p>
 
+<h6>Barging with transport aircraft</h6>
+<p>
+    The rules does not explicitly allow or disallow transport aircraft from barging, but does state that barging is made as part of movement.
+    But as aircraft landing or taking off is not considered movement for Overwatch purposes, it seems most consistent to not allow transport
+    aircraft to barge.
+</p>
+
 <h6>Broken air transports</h6>
 <p>
     In case an air transport breaks (without dying) it can choose to stay on the board and rally like any other
