--- a/lists/O/snakebiteclan.log.html
+++ b/lists/O/snakebiteclan.log.html
@@ -26,5 +26,8 @@
     action which is a challenge for the Orks.
 </p>
 <p>
+    The Brutes replace the Nobz, with worse shooting, and has gained the powerful "Rush 'em Ladz" special rule in exchange for their Commander special rule. This gives their formation a +1 bonus when attempting to take March actions, somewhat compensating for the army's slow speed when compared to other Ork lists.
+</p>
+<p>
     The Wyrdboy character has a slightly different function in the list. It is cheaper, but has shorter range. It also cannot be placed on War Engines, but must be allocated to an INF unit.
 </p>
