--- a/lists/Cultists/latd.log.html
+++ b/lists/Cultists/latd.log.html
@@ -1,4 +1,4 @@
-<h4>Version 1.0.beta</h4>
+<h4>Version 1.0.beta-2</h4>
 <p>
     The EA:Ragnarök Lost and the Damned list is based on the developmental NetEA "Redux" version, splitting off all Imperial Guard formations into a separate list: Slaves to Darkness. The original Lost and the Damned list was very thematic, giving huge flexibility, but with rather too many ingredients that we think are better off in two separate lists.
 </p>
