--- a/lists/Cultists/std.log.html
+++ b/lists/Cultists/std.log.html
@@ -1,4 +1,4 @@
-<h4>Version 1.0.beta</h4>
+<h4>Version 1.0.beta-2</h4>
 <p>
     The EA:Ragnarök Slaves to Darkness list is intended to the be the repository for all the Traitor Imperial Guard stuff that was left over when Lost and the Damned became a pure cultist list. It also is a great alternative for those who prefers the Alpha Legion to be more generically chaotic than the main, Heresy themed, list.
 </p>
