--- a/lists/O/snakebiteclan.log.html
+++ b/lists/O/snakebiteclan.log.html
@@ -1,4 +1,4 @@
-<h4>Version 1.0.beta</h4>
+<h4>Version 1.0.beta-2</h4>
 <p>
     The EA:Ragnarök Snakebite Clan Ork list is the EA:Ragnarök version of a Feral Ork list. We felt the existing Feral
     Orks lists were a bit one-sided and frustrating to play against, with an overload of large 4+ reinforced armor War
