--- a/lists/IG/deathkorps.log.html
+++ b/lists/IG/deathkorps.log.html
@@ -21,7 +21,6 @@
     are no longer 0-1.
 </p>
 
-
 <h5>Additional nerfs, boosts & tweaks</h5>
 <ul>
     <li>Death Rider Company: No longer limited in the list.</li>
@@ -41,4 +40,14 @@
         trenches as standard.
     </li>
     <li>Armoured Sentinels: Slightly slower, slightly better armour, and an Autocannon instead of the Multilaser.</li>
+</ul>
+
+<h5>Version 1.0.beta-2</h5>
+<p>
+    Concerned that DKoK might be a bit too weak compared to other versions of the list, they have now recieved the following boosts & tweaks:
+</p>
+<ul>
+    <li>Bombards added to the list.</li>
+    <li>HQ and Assault Company, Macharius and Grenadiers 25pts cheaper.</li>
+    <li>Leman Russ Platoon (6 LRs) replaced with Leman Russ Squadron (4 LRs).</li>
 </ul>
