--- a/lists/Cultists/latd.log.html
+++ b/lists/Cultists/latd.log.html
@@ -1,4 +1,4 @@
-<h4>Version 1.0.beta-2</h4>
+<h4>Version 1.0.beta</h4>
 <p>
     The EA:Ragnarök Lost and the Damned list is based on the developmental NetEA "Redux" version, splitting off all Imperial Guard formations into a separate list: Slaves to Darkness. The original Lost and the Damned list was very thematic, giving huge flexibility, but with rather too many ingredients that we think are better off in two separate lists.
 </p>
@@ -14,3 +14,7 @@
     <li>Like the Black Legion list, all the lesser daemons now cost 1 summoning point each, while the different lesser daemons are now more balanced with each other. The Lesser Daemon pool points are also slightly cheaper.</li>
     <li>Daemon Engines: The Lost and the Damned list inherits the changes made to various daemon engines made in the CSM lists, with the Cerberites as a new addition.</li>
 </ul>
+<h4>Version 1.0.beta-2</h4>
+<p>
+    The list inherits the changes done to the Slaves to Darkness and Death Guard lists.
+</p>
