--- a/lists/Cultists/std.log.html
+++ b/lists/Cultists/std.log.html
@@ -1,4 +1,4 @@
-<h4>Version 1.0.beta-2</h4>
+<h4>Version 1.0.beta</h4>
 <p>
     The EA:Ragnarök Slaves to Darkness list is intended to the be the repository for all the Traitor Imperial Guard stuff that was left over when Lost and the Damned became a pure cultist list. It also is a great alternative for those who prefers the Alpha Legion to be more generically chaotic than the main, Heresy themed, list.
 </p>
@@ -10,3 +10,7 @@
 <ul>
     <li>Chaos Navy: For thematic reasons the Imperial Navy formations didn't make it into StD. The idea behind this is that it seems unlikely that Traitor Guard formations would be able to get hold of Imperial Navy assets like Thunderbolts or Marauder Bombers. Those kinds of assets are better represented by the Chaos Navy.</li>
 </ul>
+<h4>Version 1.0.beta-2</h4>
+<p>
+    The core formation was made slightly more rigid, as it was a bit too flexible before. Lesser daemons bumped by 5 points to cost the same as in Chaos Space Marine lists.
+</p>
