--- a/lists/O/snakebiteclan.log.html
+++ b/lists/O/snakebiteclan.log.html
@@ -1,4 +1,4 @@
-<h4>Version 1.0.beta-2</h4>
+<h4>Version 1.0.beta</h4>
 <p>
     The EA:Ragnarök Snakebite Clan Ork list is the EA:Ragnarök version of a Feral Ork list. We felt the existing Feral
     Orks lists were a bit one-sided and frustrating to play against, with an overload of large 4+ reinforced armor War
@@ -26,8 +26,15 @@
     action which is a challenge for the Orks.
 </p>
 <p>
-    The Brutes replace the Nobz, with worse shooting, and has gained the powerful "Rush 'em Ladz" special rule in exchange for their Commander special rule. This gives their formation a +1 bonus when attempting to take March actions, somewhat compensating for the army's slow speed when compared to other Ork lists.
+    The Wyrdboy character has a slightly different function in the list. It is cheaper, but has shorter range. It also cannot be placed on War Engines, but must be allocated to an INF unit.
+</p>
+<h4>Version 1.0.beta-2</h4>
+<p>
+    Finding the list a bit too weak, we've introduced the following buffs to the list:
 </p>
 <p>
-    The Wyrdboy character has a slightly different function in the list. It is cheaper, but has shorter range. It also cannot be placed on War Engines, but must be allocated to an INF unit.
+    The Brutes, which replace the Nobz, has gained the powerful "Rush 'em Ladz" special rule in exchange for their previous Commander special rule. This gives their formation a +1 bonus when attempting to take March actions, somewhat compensating for the army's slow speed when compared to other Ork lists. This made Junkatrukks slightly more expensive. A powerful choice even before, as it is the fastest formation, it is even better now as it has a Brute.
+</p>
+<p>
+    The Gargantuan Squiggoth gained an additional MW attack in CC, and both it and the Orkeosaurus now have 3+ in CC.
 </p>
