--- a/content/intro.html
+++ b/content/intro.html
@@ -32,7 +32,7 @@
     We have designed a wide range of armies for you to play in your EA:Ragnarök games. A lot of list foundations and ideas are credit to the NetEA group, Epic-UK group and the F-ERC group, but all lists has received changes. We have tried to give each list its own unique felling and playstyle. As mentioned above we want the armies to play nice with the epic core rules, so some of the most extreme armies (like Necrons) have received major changes to act more like a "normal" epic armies. We have done a few general changes across all EA:Ragnarök lists that we hope will improve the game, and overall list design.
 </p>
 <p>
-    <b>Titans:</b> We wanted Titans to be a more common site in Epic. Looking at NetEA and Epic UK we thought there were a few issues
+    <b>Titans:</b> We wanted Titans to be a more common sight in Epic. Looking at NetEA and Epic UK we thought there were a few issues
     with Titans: They are generally too expensive for the damage output they bring and in many cases they require specialized formations to bring them down, which some armies lack. We have introduced a general weakness to being swarmed by enemy infantry, reducing close combat values and number of extra attacks on titan close combat weapons. We have also introduces the <i>God Machine</i> and <i>Split Fire</i> special rules for large (8+ DC) titans, which both makes them better and introduces a weakness...
 </p>
 <p>
@@ -42,7 +42,7 @@
 <!--
 <h4>Titans</h4>
 <p>
-    We wanted Titans to be a more common site in Epic. Looking at NetEA and Epic UK we thought there were a few issues
+    We wanted Titans to be a more common sight in Epic. Looking at NetEA and Epic UK we thought there were a few issues
     with Titans: They are generally too expensive for the damage output they bring and in many cases they require
     specialized formations to bring them down, which some armies lack. This leads to situations where the main purpose
     of the Titan is to deny the enemy BTS, TSNP and DTF by rushing onto the opponents table half, contesting one or both
