--- a/content/scenarios/fire.html
+++ b/content/scenarios/fire.html
@@ -23,6 +23,8 @@
     restricted to contesting objectives may only prevent enemy formations from flipping objectives, while formations
     that can neither contest nor capture objectives can't cause or prevent the flipping of objectives.</p>
 
+    <p>Aircraft which have landed may neither capture nor contest objectives on the same turn that it lands.</p>
+
 <h4>Victory Conditions</h4>
 <p>Same as the NetEA Epic Tournament Game Rules, with the following changes:</p>
 
