--- a/lists/Chaos/deathguard.log.html
+++ b/lists/Chaos/deathguard.log.html
@@ -31,3 +31,7 @@
 <p>
     There was a lot of debate regarding the Plague Zombies. In the first beta we nerfed them significantly compared to the Epic UK original, as we felt they could be used in very destructive ways. The main problem, and what makes them so hard to price, is the fact that they are fearless. In the beta-2 version we have renamed the unit Poxwalkers, removed the <i>fearless</i> special rule but made the formation much cheaper at 125 points.
 </p>
+<h4>Version 1.0.beta-3</h4>
+<p>
+    With some more games played, we've found the list a smidge too strong. For this reason the Death Guard Retinue has been made 25pts more expensive, and the Blight Drones have the Jump Pack special rule instead of being Skimmer.
+</p>
