Fixed various texts, rewrite Fire the Beacons

--- a/content/scenarios/fire.html
+++ b/content/scenarios/fire.html
@@ -1,45 +1,38 @@
 <h2>Fire the Beacons</h2>
 <p class="lead">
-    The Fire the Beacons scenario is based on the scenario described in the
-    <a href="https://tp.net-armageddon.org/tournament-pack/#epic-tournament-game-rules">NetEA Epic Tournament Game
-        Rules</a>. The scenario description below describes how the Battle Line scenario differs from the NetEA
-    original. Any sections not mentioned here, such as Setup, Pre-game discussions, etc, uses the exact rules from the
-    NetEA original.
+    The Fire the Beacons scenario is based on the scenario described in the <a href="https://tp.net-armageddon.org/tournament-pack/#epic-tournament-game-rules">NetEA Epic Tournament Game Rules</a>. The scenario description below describes how the Battle Line scenario differs from the NetEA original. Any sections not mentioned here, such as Setup, Pre-game discussions, etc, uses the exact rules from the NetEA original.
+</p>
+
+<p>
+    This scenario requires 6 double-sided markers (for example a coin) which can be flipped as objectives switch control between players. Unlike the normal Epic Tournament Scenario, objectives are always in possession of one player and do have memory (it will still be in your possession even if you move away from the objective). Each objective starts the game in possession of the player who's half it is on. Use the double-sided tokens to keep track of who is in possession of the objectives during the game.
+</p>
+
+<p>
+    Objectives changes possession when the opposing side is the only one that has an unbroken unit within 15cm of it after each completed action by any formation. This includes units that have successfully rallied. Formations that are restricted to contesting objectives may only prevent enemy formations from flipping objectives, while formations that can neither contest nor capture objectives can't cause or prevent the flipping of objectives. Aircraft which have landed may neither capture nor contest objectives on the same turn that it lands.
+</p>
+
+<p>
+    Fire the Beacons are played over three turns and points are accumulated over all three turns. See Victory Conditions for details on how to score points.
 </p>
 
 <h4>Place Objective Markers</h4>
-<p>This scenario requires 3 special objective tokens for each player, with a special marker or double sided marker (for
-    example a coin) which can be flipped or exchanged as objectives switch control between players.</p>
-
-<p>In addition to standard objective placement rules the Blitz objective must be placed at least 15cm away from any
-    corner, and the remaining two objectives must be set up at least 15cm away from any board edge. Also, you may not
-    place objective markers in terrain that is impassable for any unit type.</p>
-
-<p>Unlike in the normal Epic Tournament Scenario, objectives do have memory. Each objective starts the game in
-    possession of the player who's half it is on.</p>
-
-<p>Objectives flips sides when the opposing side is the only one that has an unbroken unit within 15cm of it after each
-    completed action by any formation. This includes units that have successfully rallied. Formations that are
-    restricted to contesting objectives may only prevent enemy formations from flipping objectives, while formations
-    that can neither contest nor capture objectives can't cause or prevent the flipping of objectives.</p>
-
-    <p>Aircraft which have landed may neither capture nor contest objectives on the same turn that it lands.</p>
-
-<h4>Victory Conditions</h4>
-<p>Same as the NetEA Epic Tournament Game Rules, with the following changes:</p>
 
 <p>
-    As usual, units from broken formations or from formations that have rallied that End Phase cannot contest
-    objectives, but this also includes the "They Shall Not Pass" victory condition. In
-    addition, Aircraft which have landed may neither capture nor contest objectives or deny "They Shall Not Pass" on the
-    same turn that it lands.
+    In addition to standard objective placement rules the Blitz objective must be placed at least 15cm away from any corner, and the remaining two objectives must be set up at least 15cm away from any board edge. Also, you may not place objective markers in terrain that is impassable for any unit type.
 </p>
 
-<p>The "Break Their Spirit" VC is worth 2 points once. All other
-    objectives are worth 1 point each turn.
-    These points accumulate from the first turn onwards.</p>
+<h4>Victory Conditions</h4>
 
-<p>The game ends after three turns, or if either player manages to accumulate a lead of 8 VP in any turn.</p>
+<p>
+    In this scenario Victory Conditions are checked after each turn (already from turn one) <b>before</b> rallies. The five Victory Conditions are the same as in the NetEA standard scenario: <i>They Shall Not Pass</i>, <i>Defend the Flag</i>, <i>Take and Hold</i>, <i>Blitz</i> and <i>Break Their Spirit</i>. The <i>Break Their Spirit</i> Victory Condition is worth 2 points once. All other Victory Conditions are worth 1 point each turn. Points accumulate over all three turns and the winner is determined by calculating the difference between points at the end of turn three. If either player manages to accumulate a lead of 8 VP or more already in turn two, the game ends already after turn two.
+</p>
+<p>
+    Even if the objectives are in possession of one player, the objectives can be contested as normal. E.g. even if all three objectives on your side of the table is in your possession you do not score <i>Defend the Flag</i> if your opponent has an unborken formation within 15cm of any of the three objectives. One change to the standard rules is that you don't have to have formations within 15cm of objectives in your possession in order to score. E.g. in the example above where all three objectives on your side of the table is in your possession, you can score <i>Defend the Flag</i> even if you don't have formations within 15cm of all three objectives as they are already in your possession.
+</p>
+
+<p>One other important change to the standard scenario is that Aircrafts which have landed may neither capture objectives, contest objectives or deny <i>They Shall Not Pass</i> on the same turn that it lands. A landed aircraft can stay on the board and capture objectives as a normal ground formation from the turn after it landed.</p>
+
+<p>The table below translates your VC points into tournament scores:</p>
 
 <table class="table table-striped">
     <thead>
