--- a/content/intro.html
+++ b/content/intro.html
@@ -26,6 +26,9 @@
 <p>
     As a positive side effect Fire the Beacons also discourages some of the more extreme armies such as extremely air-heavy lists, lists that enter the board via drop/tunneling/teleport on turn three etc. The EA ruleset was not designed for these kinds of armies and does not handle them in a good way. We want the armies to play nice with the core rules, and the Fire the Beacons scenario was one way of restricting players when building their armies without a complete overhaul of all army lists. Fire the Beacons also discourages defensive armies that can be very frustrating to face, where your opponent only sits back and shoot you as you move in.
 </p>
+<p>
+    We have also been looking at the Epic Armageddon core rules. We dont want to do changes to the core rules but there are a number of rules that can be interpreted in more than one way. We have tried to write down how we would like the rules to be interpreted in EA:Ragnarök games. We also added a few house-rules that we think will make the game better, such as the <i>Scouting from behind</i>. Our interpretations and house-rules can be found at the <a href="content/rules">Rules page</a>. We have also tried to get more diverse terrain on the epic tables, without breaking the balance of the game. On the <a href="content/terrain">Terrain page</a> we have introduced a number of new terrain types, and also revised some of the standard Epic terrain in an attempt to make it more interesting.
+</p>
 
 <h4>Army Lists</h4>
 <p>
@@ -33,59 +36,8 @@
 </p>
 <p>
     <b>Titans:</b> We wanted Titans to be a more common sight in Epic. Looking at NetEA and Epic UK we thought there were a few issues
-    with Titans: They are generally too expensive for the damage output they bring and in many cases they require specialized formations to bring them down, which some armies lack. We have introduced a general weakness to being swarmed by enemy infantry, reducing close combat values and number of extra attacks on titan close combat weapons. We have also introduces the <i>God Machine</i> and <i>Split Fire</i> special rules for large (8+ DC) titans, which both makes them better and introduces a weakness...
+    with Titans: They are generally too expensive for the damage output they bring and in many cases they require specialized formations to bring them down, which some armies lack. We have introduced a general weakness to being swarmed by enemy infantry, reducing close combat values and number of extra attacks on titan close combat weapons. We have also introduced the <i>God Machine</i> and <i>Split Fire</i> special rules for large (8+ DC) titans, which both makes them better and introduces a weakness...
 </p>
 <p>
     <b>Knights:</b> We felt that the War Engine rules did not work well when the War Engines were taken in large formations. They block line of sight for each other, both for shooting and fire-fights, and assaults were very challenging if played by the book. In an attempt to fix this we have introduced a new type of unit: Heavy Armoured Vehicle (H-AV). This is used for Knights and similar units like e.g. Stompas as well as some larger tanks. Details on the Heavy Armoured Vehicle rules can be found in the army lists, but on a high level they behave like an Armoured Vehicle with 2 DC.
 </p>
-
-<!--
-<h4>Titans</h4>
-<p>
-    We wanted Titans to be a more common sight in Epic. Looking at NetEA and Epic UK we thought there were a few issues
-    with Titans: They are generally too expensive for the damage output they bring and in many cases they require
-    specialized formations to bring them down, which some armies lack. This leads to situations where the main purpose
-    of the Titan is to deny the enemy BTS, TSNP and DTF by rushing onto the opponents table half, contesting one or both
-    of the T&H objectives. While in som cases very effective, we thought this was not great from a game design
-    perspective.
-</p>
-<p>
-    We have done the following changes to most of the large titans in an attempt to make them a more interesting option.
-</p>
-<ul>
-    <li>
-        We have reduced the price of most titans to make them more viable, given the importance of activations in Epic.
-    </li>
-    <li>
-        We have introduced a general weakness to being swarmed by enemy infantry. To do this we have reduced the close
-        combat value of many titans and also changed the stats on most Titan close combat weapons. Titan close combat
-        weapons now generally give one extra TK attack doing multiple damage instead of giving multiple extra TK or
-        Macro attacks. This reduces their efficiency against infantry while still being useful against other War
-        Engines.
-    </li>
-    <li>
-        We have removed Thick Rear Armour from many Titans to force you to play them with a bit more care.
-    </li>
-    <li>
-        We have introduces the <i>God Machine</i> and <i>Split Fire</i> special rules for large (8+ DC) titans. God
-        machine gives blast markers to your opponent's army if you kill or break his large Titan, and Split Fire allows
-        the Titan to target more than one formation under some circumstances.
-    </li>
-</ul>
-<p>
-    When combining these changes we hope to see more Titans fielded, but also to see that people design lists to support
-    and protect their Titans in a way that was sometimes not needed in NetEA or Epic UK lists. We also hope this reduces
-    the need to bring specialized Titan killer formations to tournaments.
-</p>
-
-<h4>Knights</h4>
-<p>
-    We felt that the War Engine rules did not work well when the War Engines were taken in large formations. They block
-    line of sight for each other, both for shooting and fire-fights, and assaults were very challenging if played by the
-    book. Each Knight can only allocate close combat hits to enemies in base-to-base and fire-fight hits to enemies not
-    in base-to-base. To do this correct you would have to roll for each Knight individually, which is a tedious process.
-    In an attempt to fix this we have introduced a new type of unit: Heavy Armoured Vehicle (H-AV). This is used for
-    Knights and similar units like e.g. Stompas. Details on the Heavy Armoured Vehicle rules can be found in the army
-    lists, but on a high level they behave like an Armoured Vehicle with 2 DC.
-</p>
--->
