--- a/content/scenarios.html
+++ b/content/scenarios.html
@@ -8,6 +8,20 @@
     <div class="row" style="margin-top: 15px">
         <div class="col-lg-2 d-none d-lg-block">&nbsp</div>
         <div class="col-sm-4 col-lg-2 text-center">
+            <a href="content/scenarios/fire.html">
+                <img class="img-responsive" style="width:100%" src="images/Scenario_Beacons.jpg"/>
+                Fire the Beacons
+            </a>
+        </div>
+        <div class="col-sm-8 col-lg-6 my-auto">
+            <b>Fire the Beacons</b> is a new scenario over three turns. While the rules and victory conditions are
+            familiar from the NetEA standard scenario, in Fire the Beacons you accumulate points from the first turn
+            onwards. Fire the Beacons should be considered the standard scenario for EA:Ragnarök.
+        </div>
+    </div>
+    <div class="row" style="margin-top: 15px">
+        <div class="col-lg-2 d-none d-lg-block">&nbsp</div>
+        <div class="col-sm-4 col-lg-2 text-center">
             <a href="content/scenarios/battleline.html">
                 <img class="img-responsive" style="width:100%" src="images/Scenario_Battle.jpg"/>
                 Battle Line
@@ -17,21 +31,6 @@
             The <b>Battle Line</b> scenario is based on the scenario described in the NetEA Epic Tournament Game Rules.
             We have done a few tweaks which we hope will improve the scenario and pose some new challenges in a well
             known context.
-        </div>
-    </div>
-    <div class="row" style="margin-top: 15px">
-        <div class="col-lg-2 d-none d-lg-block">&nbsp</div>
-        <div class="col-sm-4 col-lg-2 text-center">
-            <a href="content/scenarios/fire.html">
-                <img class="img-responsive" style="width:100%" src="images/Scenario_Beacons.jpg"/>
-                Fire the Beacons
-            </a>
-        </div>
-        <div class="col-sm-8 col-lg-6 my-auto">
-            <b>Fire the Beacons</b> is a new scenario over three turns. While the rules and victory conditions are
-            familiar from the NetEA standard scenario, in Fire the Beacons you accumulate points from the first turn
-            onwards. We have used it a lot during play testing and really enjoyed the fact that it puts objectives in
-            focus already from turn one. We strongly suggest you try it out!
         </div>
     </div>
 </div>
