--- a/lists/IG/deathkorps.log.html
+++ b/lists/IG/deathkorps.log.html
@@ -51,3 +51,8 @@
     <li>HQ and Assault Company, Macharius and Grenadiers 25pts cheaper.</li>
     <li>Leman Russ Platoon (6 LRs) replaced with Leman Russ Squadron (4 LRs).</li>
 </ul>
+
+<h5>Version 1.0.beta-3</h5>
+<ul>
+    <li>Siege Infantry Company 50pts cheaper, in line with Baran Siege Masters.</li>
+</ul>
