--- a/content/scenarios/fire.html
+++ b/content/scenarios/fire.html
@@ -61,13 +61,18 @@
         <td>22-10</td>
     </tr>
     <tr>
-        <th scope="row">Winning Draw</th>
+        <th scope="row">Pyrrhic Victory</th>
         <td>Lead of 2 points</td>
+        <td>20-12</td>
+    </tr>
+    <tr>
+        <th scope="row">Winning Draw</th>
+        <td>Lead of 1 point</td>
         <td>18-14</td>
     </tr>
     <tr>
         <th scope="row">Complete Draw</th>
-        <td>Lead of 1 point or less</td>
+        <td>No difference in VP</td>
         <td>16-16</td>
     </tr>
     </tbody>
