--- a/lists/IG/deathkorps.log.html
+++ b/lists/IG/deathkorps.log.html
@@ -56,3 +56,7 @@
 <ul>
     <li>Siege Infantry Company 50pts cheaper, in line with Baran Siege Masters.</li>
 </ul>
+<h5>Version 1.0.beta-4</h5>
+<ul>
+    <li>In line with changes made to Imperial Guard Super Heavy Tanks, Baneblades and Stormswords are slightly cheaper. Baneblades has only 4+ FF, while the Stormsword has only 30cm on its Siege Cannon.</li>
+</ul>
