--- a/lists/NID/gscult.log.html
+++ b/lists/NID/gscult.log.html
@@ -16,3 +16,9 @@
     on the enemy, and find the right balance between the number of activations in your army and the punch each formation
     can deliver.
 </p>
+<h4>Version 1.0.beta-2</h4>
+<h5>Additional nerfs, boosts & tweaks</h5>
+<ul>
+    <li>Ridgerunners are moved from Elite to support, as they were hard to fit in with the very competitive support section.</li>
+    <li>Aberrants have got 4+ Armour, as they felt quite weak, and had oddly low save compared to e.g. Ogryns or Big Mutants in other lists.</li>
+</ul>
