--- a/lists/NID/gscult.log.html
+++ b/lists/NID/gscult.log.html
@@ -21,4 +21,5 @@
 <ul>
     <li>Ridgerunners are moved from Elite to support, as they were hard to fit in with the very competitive support section.</li>
     <li>Aberrants have got 4+ Armour, as they felt quite weak, and had oddly low save compared to e.g. Ogryns or Big Mutants in other lists.</li>
+    <li>The Assault Excavator feels a bit too weak, so it now has 4+ CC.</li>
 </ul>
