--- a/lists/O/O_race.log.html
+++ b/lists/O/O_race.log.html
@@ -39,7 +39,7 @@
         transported Warband more attractive.
     </li>
     <li>
-        The Battlefortresses and Gunfortresses units has received a price reduction to 100 points each, while Gunfortresses have been reduced to 5+ FF.
+        The Battlefortresses and Gunfortresses units has received a price reduction to 100 points each, while Gunfortresses have been reduced to 5+ in CC and FF.
     </li>
     <li>
         Gargants with the God Machine special rule now have the rule Stomp 'em Good instead of Split Fire.
