Updated status version and dates on approved lists

--- a/lists/Cultists/di.log.html
+++ b/lists/Cultists/di.log.html
@@ -1,9 +1,9 @@
 <h4>Version 1.0.beta</h4>
 <p>
-	The EA:Ragnarök Daemonic Incursion list is a completely new list, based partly on the Lost and the Damned army. During its development it has had an impact on all chaos lists, as certain units had to be tweaked for purely Daemonic formations to make sense. Daemonic armies are both very explosive, as they can engage out of Chaos Gates and Warp Rifts to devastating effect, but are also quite fragile, as daemonic formations are destroyed when becoming broken. 
+	The EA:RagnarÃ¶k Daemonic Incursion list is a completely new list, based partly on the Lost and the Damned army. During its development it has had an impact on all chaos lists, as certain units had to be tweaked for purely Daemonic formations to make sense. Daemonic armies are both very explosive, as they can engage out of Chaos Gates and Warp Rifts to devastating effect, but are also quite fragile, as daemonic formations are destroyed when becoming broken.
 </p>
 <p>
-	Exalted Greater Daemons: These collectively both serve the function as the list's BTS, its Supreme Commanders, and for determining which powers can be included in the army. Like all EA:Ragnarök lists, DI suffers from Eternal Animosity.
+	Exalted Greater Daemons: These collectively both serve the function as the list's BTS, its Supreme Commanders, and for determining which powers can be included in the army. Like all EA:RagnarÃ¶k lists, DI suffers from Eternal Animosity.
 </p>
 <p>
 	Brittle Formations: While most daemons are Expendable, daemonic formations are very sensitive to clipping assaults, which requires careful planning on the daemon player's part. Units which can countercharge more than 5cm can be particularly useful for ensuring that the entire formation gets to fight.
