--- a/lists/NID/dagon.log.html
+++ b/lists/NID/dagon.log.html
@@ -8,3 +8,7 @@
 <p>
     The structure of the Dagon Tyranid list is one of its main features, making it possible to be very creative with formation composition. It has been a challenge to make it attractive to not only take basic Assault Swarms, though that is certainly a viable army to take.
 </p>
+<h4>Version 1.0.beta-2</h4>
+<p>
+    The Dactylis has been found to be a bit weak, so have been reduced by 25pts.
+</p>
