--- a/lists/NID/dagon.log.html
+++ b/lists/NID/dagon.log.html
@@ -12,3 +12,13 @@
 <p>
     The Dactylis has been found to be a bit weak, so have been reduced by 25pts.
 </p>
+<h4>Version 1.0.beta-3</h4>
+<p>
+    After finding that the list struggles with activations, Assault Swarms have been changed to one or two instinctive swarms, but has their base cost raised. 
+
+    Gaunts Instinctive Swarm cost 50 points per swarm instead of 75.
+    
+    Bio-Titans have been found to be too expensive, so have been reduced in DC and cost. 
+    
+    To give the list some extra options in playstyle, the restrictions on garrisons have been dropped.
+</p>
