--- a/lists/NID/dagon.log.html
+++ b/lists/NID/dagon.log.html
@@ -16,7 +16,7 @@
 <p>
     After finding that the list struggles with activations, Assault Swarms have been changed to one or two instinctive swarms, but has their base cost raised. 
 
-    Gaunts Instinctive Swarm cost 50 points per swarm instead of 75.
+    Gaunts Instinctive Swarm cost 50 points per swarm instead of 75, and a new type of Gaunt has been added: Barbgaunts.
     
     Bio-Titans have been found to be too expensive, so have been reduced in DC and cost. 
     
