--- a/lists/NID/dagon.log.html
+++ b/lists/NID/dagon.log.html
@@ -20,5 +20,5 @@
     
     Bio-Titans have been found to be too expensive, so have been reduced in DC and cost. 
     
-    To give the list some extra options in playstyle, the restrictions on garrisons have been dropped.
+    To give the list some extra options in playstyle, the restrictions on garrisons have been dropped. To adapt to this change, Biovores have been given 20cm speed, and Carnifexes have been given 15cm speed, and the Infiltators special rule.
 </p>
