--- a/lists/NID/dagon.log.html
+++ b/lists/NID/dagon.log.html
@@ -14,11 +14,9 @@
 </p>
 <h4>Version 1.0.beta-3</h4>
 <p>
-    After finding that the list struggles with activations, Assault Swarms have been changed to one or two instinctive swarms, but has their base cost raised. 
+    After finding that the list struggles with activations, Assault Swarms have been changed to one or two instinctive swarms, and a new type of Gaunt has been added: Barbgaunts.
 
-    Gaunts Instinctive Swarm cost 50 points per swarm instead of 75, and a new type of Gaunt has been added: Barbgaunts.
-    
-    Bio-Titans have been found to be too expensive, so have been reduced in DC and cost. 
-    
-    To give the list some extra options in playstyle, the restrictions on garrisons have been dropped. To adapt to this change, Biovores have been given 20cm speed, and Carnifexes have been given 15cm speed, and the Infiltators special rule.
+    Bio-Titans have been found to be too expensive to take in a competitive lists, so have been reduced in DC and cost.
+
+    To give the list some extra options in playstyle, the restrictions on garrisons have been dropped. To adapt to this change, Zoanthropes have become slightly better and are now an upgrade to Tyranid Warrios, while Carnifexes have been dropped to 2 per swarm, been given 15cm speed, and the Infiltators special rule.
 </p>
