--- a/lists/NID/dagon.log.html
+++ b/lists/NID/dagon.log.html
@@ -15,8 +15,11 @@
 <h4>Version 1.0.beta-3</h4>
 <p>
     After finding that the list struggles with activations, Assault Swarms have been changed to one or two instinctive swarms, and a new type of Gaunt has been added: Barbgaunts.
-
+</p>
     Bio-Titans have been found to be too expensive to take in a competitive lists, so have been reduced in DC and cost.
-
-    To give the list some extra options in playstyle, the restrictions on garrisons have been dropped. To adapt to this change, Zoanthropes have become slightly better and are now an upgrade to Tyranid Warrios, while Carnifexes have been dropped to 2 per swarm, been given 15cm speed, and the Infiltators special rule.
+<p>
+    <br>To give the list some extra options in playstyle, the restrictions on garrisons have been dropped, which resulted in the following changes:
+    <br>Zoanthropes have become slightly better and are now an 25 point upgrade to Tyranid Warriors.
+    <br>Carnifexes have been dropped to 2 per swarm, been given 15cm speed and the Infiltators special rule.
+    <br>Hive Tyrant Shrike is a 25 point upgrade.
 </p>
