Various NIDS tweaks

--- a/lists/NID/dagon.log.html
+++ b/lists/NID/dagon.log.html
@@ -20,6 +20,8 @@
 <p>
     <br>To give the list some extra options in playstyle, the restrictions on garrisons have been dropped, which resulted in the following changes:
     <br>Zoanthropes have become slightly better and are now an 25 point upgrade to Tyranid Warriors.
-    <br>Carnifexes have been dropped to 2 per swarm, been given 15cm speed and the Infiltators special rule.
+    <br>Carnifexes have been dropped to 2 per swarm, been given 15cm speed and the Infiltators special rule. Barbed Carnifexes have been given an extra attack i CC, but been dropped to 4+ to hit.
     <br>Hive Tyrant Shrike is a 25 point upgrade.
+    <br>Trygons have been given a slight boost, hitting on 3+ i CC.
+    <br>The Harpy Stranglethorn Cannon have been boosted to 30cm in range.
 </p>
