--- a/lists/NID/dagon.log.html
+++ b/lists/NID/dagon.log.html
@@ -14,13 +14,14 @@
 </p>
 <h4>Version 1.0.beta-3</h4>
 <p>
-    After finding that the list struggles with activations, Assault Swarms have been changed to one or two instinctive swarms, and a new type of Gaunt has been added: Barbgaunts.
+    <br>After finding that the list struggles with activations, Assault Swarms have been changed to one or two instinctive swarms, and a new type of Gaunt has been added: Barbgaunts.
+    <br>Bio-Titans have been found to be too expensive to take in a competitive lists, so have been reduced in DC and cost.
+    <br>Hive Nests have been changed in line with how they work in the Hive Fleet Hydra list, with no compulsory gaunts. Ripper Swarms have been boosted to give both extra CC and FF attacks.
+    <br>Trygons have been given a slight boost, hitting on 3+ i CC.
+    <br>The Harpy Stranglethorn Cannon have been boosted to 30cm in range.
 </p>
-    Bio-Titans have been found to be too expensive to take in a competitive lists, so have been reduced in DC and cost.
 <p>
     <br>To give the list some extra options in playstyle, the restrictions on garrisons have been dropped, which resulted in the following changes:
     <br>Zoanthropes have become slightly better and are now an 25 point upgrade to Tyranid Warriors.
     <br>Carnifexes have been dropped to 2 per swarm, been given 15cm speed and the Infiltators special rule. Barbed Carnifexes have been given an extra attack i CC, but been dropped to 4+ to hit.
-    <br>Trygons have been given a slight boost, hitting on 3+ i CC.
-    <br>The Harpy Stranglethorn Cannon have been boosted to 30cm in range.
 </p>
