--- a/lists/NID/dagon.log.html
+++ b/lists/NID/dagon.log.html
@@ -14,14 +14,20 @@
 </p>
 <h4>Version 1.0.beta-3</h4>
 <p>
-    <br>After finding that the list struggles with activations, Assault Swarms have been changed to one or two instinctive swarms, and a new type of Gaunt has been added: Barbgaunts.
-    <br>Bio-Titans have been found to be too expensive to take in a competitive lists, so have been reduced in DC and cost.
-    <br>Hive Nests have been changed in line with how they work in the Hive Fleet Hydra list, with no compulsory gaunts. Ripper Swarms have been boosted to give both extra CC and FF attacks.
-    <br>Trygons have been given a slight boost, hitting on 3+ i CC.
-    <br>The Harpy Stranglethorn Cannon have been boosted to 30cm in range.
+    After finding that the list struggles with activations, Assault Swarms have been changed to one or two instinctive swarms to reduce price. To give the list some extra options in playstyle, the restrictions on garrisons have been dropped, which resulted in the following changes:
+    <ul>
+        <li>Barbgaunts has been added to the list. They are a type of gaunt with 15cm movement and shooting, meaning they can be used as garrisons.</li>
+        <li>Zoanthropes have become slightly better, since they can now garrison along with some gaunts, and are now an 25 point upgrade to Tyranid Warriors. They have also been given a boost to their FF to justify the extra points.</li>
+        <li>Carnifexes have been dropped to 2 per swarm, been given 15cm speed and the Infiltators special rule. Barbed Carnifexes have been given an extra attack i CC, but been dropped to 4+ to hit.</li>
+    </ul>
 </p>
 <p>
-    <br>To give the list some extra options in playstyle, the restrictions on garrisons have been dropped, which resulted in the following changes:
-    <br>Zoanthropes have become slightly better and are now an 25 point upgrade to Tyranid Warriors.
-    <br>Carnifexes have been dropped to 2 per swarm, been given 15cm speed and the Infiltators special rule. Barbed Carnifexes have been given an extra attack i CC, but been dropped to 4+ to hit.
+    Some other minor changes to list balance:
+    <ul>
+        <li>The Exocrines did not see much playtime, and has been given MW to their FF value making them a powerful firefight and support unit.</li>
+        <li>Bio-Titans have been found to be too expensive to take in a competitive lists, so have been reduced in DC and cost.</li>
+        <li>Hive Nests have been changed in line with how they work in the Hive Fleet Hydra list, with no compulsory gaunts. Ripper Swarms have been boosted to give both extra CC and FF attacks.</li>
+        <li>Trygons have been given a slight boost, hitting on 3+ i CC.</li>
+        <li>The Harpy Stranglethorn Cannon have been boosted to 30cm in range.</li>
+    </ul>
 </p>
