--- a/lists/NID/dagon.log.html
+++ b/lists/NID/dagon.log.html
@@ -36,5 +36,6 @@
 <ul>
     <li>The cost for Breacher Swarms and Genestealer Swarms was reduced by 25 points.</li>
     <li>Harridans can now be taken without instinctive swarms, and has been given Tentaclids to give the army another option for AA.</li>
+    <li>The Dagon Overlord has been given 5+ in FF.</li>
 </ul>
 <p>Some of the changed that were made as part of introducing Hive Fleet Hydra did not work well with the Hive Fleet Dagon Mycetic Spore option. You could drop very small formations with basically only synapse creatures, which felt wrong. The Mycetic Spore has been changed from an Instinctive Swarm to a regular upgrade option to fix the problem.</p>
